# agile_projects

./: .flake8  .gitignore  .pre-commit-config.yaml  pre-commit  pyproject.toml  setup.sh  tox.ini
.github/workflows/: django.yml
agile_projects/: settings.py  urls.py
apps/: router.py
apps/fixtures/: projects_fixture.json  tags_fixture.json  tasks_fixture.json
apps/projects/: urls.py
apps/projects/migrations/: 0001_initial.py  0002_projectfile_project_files.py
apps/projects/models/: __init__.py  project.py
apps/projects/serializers/: project_file_serializers.py  project_serializers.py
apps/projects/tests/: project_files_test.py  project_model_test.py  project_response_class_test.py  projects_test.py  test_mocks.py  test_project_files.py  test_project_model.py  test_projects.py  test_projects_views.py
apps/projects/utils/: upload_file_helper.py
apps/projects/views/: project_file_views.py  project_files_views.py  project_views.py
apps/tasks/: urls.py
apps/tasks/choices/: priorities.py  statuses.py
apps/tasks/migrations/: 0001_initial.py  0002_task.py
apps/tasks/models/: __init__.py  task.py
apps/tasks/serializers/: task_srializers.py  tasks_serializers.py
apps/tasks/tests/: test_first_case.py  test_tags.py  test_tags_with_fixtures.py  test_tasks.py
apps/tasks/utils/: set_date_time.py  set_end_of_month.py
apps/tasks/views/: tag_views.py  task_view.py  task_views.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/choices/: positions.py
tests/: test_get_some_user_info.py  test_user_list_and_create.py
(+3 files in other folders)
