[tool.black]
line-length = 79
include = '\.pyi?$'
skip-string-normalization = true
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | apps/.*/migrations
  | \.gitignore
  | __pycache__
  | .tox
  | .*.tox.*
)/
'''


[tool.poetry]
name = "agile-projects"
version = "0.1.0"
description = ""
authors = ["Pareiko Vladislav <parieiko.vlad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.4"
drf-yasg = "^1.21.7"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"
tox = "^4.16.0"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
